--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,21 +1,94 @@
-// First load Pillar's config as fallback, then Dillo's
-@import ../../../pillar/node_modules/bootstrap/scss/functions
-@import ../../../pillar/node_modules/bootstrap/scss/variables
-@import ../../../pillar/node_modules/bootstrap/scss/mixins
-@import ../../../pillar/src/styles/_config
-@import _config_global
-@import _config
+// Bootstrap variables, functions and mixins to use later.
+@import '../../../pillar/node_modules/bootstrap/scss/functions'
+@import '../../../pillar/node_modules/bootstrap/scss/variables'
+@import '../../../pillar/node_modules/bootstrap/scss/mixins'
 
-@import ../../../pillar/src/styles/_utils
-@import _utils
+// Load our own variables. First load Pillar'sas fallback, then Dillo's.
+@import '../../../pillar/src/styles/_config'
+@import config_global
 
-// Not cool. It has too many Blender Cloud stuff, needs splitting.
-@import ../../../pillar/src/styles/base
+// Override specific variables to build the dark theme.
+// TODO(Pablo): Use gulp to append this and compile the dark version
+@import config
 
-@import ../../../pillar/src/styles/plugins/_js_select2
+// Bootstrap variable overrides.
+$body-bg: $color-background
+$body-color: $color-text
+$dropdown-bg: $color-background
 
+// Bootstrap components.
+@import "../../../pillar/node_modules/bootstrap/scss/utilities"
+@import "../../../pillar/node_modules/bootstrap/scss/root"
+@import "../../../pillar/node_modules/bootstrap/scss/reboot"
+
+@import "../../../pillar/node_modules/bootstrap/scss/grid"
+@import "../../../pillar/node_modules/bootstrap/scss/forms"
+@import "../../../pillar/node_modules/bootstrap/scss/buttons"
+@import "../../../pillar/node_modules/bootstrap/scss/dropdown"
+@import "../../../pillar/node_modules/bootstrap/scss/button-group"
+@import "../../../pillar/node_modules/bootstrap/scss/input-group"
+
+
+@import "../../../pillar/node_modules/bootstrap/scss/type"
+@import "../../../pillar/node_modules/bootstrap/scss/images"
+
+@import "../../../pillar/node_modules/bootstrap/scss/grid"
+@import "../../../pillar/node_modules/bootstrap/scss/tables"
+@import "../../../pillar/node_modules/bootstrap/scss/transitions"
+@import "../../../pillar/node_modules/bootstrap/scss/custom-forms"
+
+@import "../../../pillar/node_modules/bootstrap/scss/nav"
+@import "../../../pillar/node_modules/bootstrap/scss/navbar"
+
+@import "../../../pillar/node_modules/bootstrap/scss/card"
+@import "../../../pillar/node_modules/bootstrap/scss/breadcrumb"
+@import "../../../pillar/node_modules/bootstrap/scss/pagination"
+@import "../../../pillar/node_modules/bootstrap/scss/badge"
+@import "../../../pillar/node_modules/bootstrap/scss/list-group"
+@import "../../../pillar/node_modules/bootstrap/scss/close"
+@import "../../../pillar/node_modules/bootstrap/scss/modal"
+@import "../../../pillar/node_modules/bootstrap/scss/tooltip"
+@import "../../../pillar/node_modules/bootstrap/scss/popover"
+
+.bg-light
+	background-color: $color-background-light !important
+
+// Pillar utilities first, then Dillo's.
+@import '../../../pillar/src/styles/_utils'
+@import utils
+
+// Pillar components.
+@import '../../../pillar/src/styles/apps_base'
+@import '../../../pillar/src/styles/notifications'
+@import '../../../pillar/src/styles/comments'
+@import '../../../pillar/src/styles/error'
+
+@import '../../../pillar/src/styles/user'
+
+@import '../../../pillar/src/styles/components/base'
+@import '../../../pillar/src/styles/components/alerts'
+@import '../../../pillar/src/styles/components/navbar'
+@import '../../../pillar/src/styles/components/dropdown'
+@import '../../../pillar/src/styles/components/footer'
+@import '../../../pillar/src/styles/components/shortcode'
+@import '../../../pillar/src/styles/components/statusbar'
+@import '../../../pillar/src/styles/components/search'
+@import '../../../pillar/src/styles/components/flyout'
+@import '../../../pillar/src/styles/components/forms'
+@import '../../../pillar/src/styles/components/inputs'
+@import '../../../pillar/src/styles/components/buttons'
+@import '../../../pillar/src/styles/components/popover'
+@import '../../../pillar/src/styles/components/tooltip'
+@import '../../../pillar/src/styles/components/checkbox'
+@import '../../../pillar/src/styles/components/overlay'
+
+@import '../../../pillar/src/styles/plugins/_js_select2'
+
+// Dillo's own styles.
 @import _base
 @import _item
 @import _list
 @import _user
 @import _error
+
+@import _settings_base
