Layout: Use flex for list of refining values.

--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -124,7 +124,7 @@ html(lang='en')
 				.d-header-action.refine
 					nav.nav-bar
 						ul.list-unstyled.d-flex.align-items-center.m-0
-							li
+							li.d-flex
 								#list-refined-values
 								#list-tags.wgt-dropdown-toggle
 								//- Add POST_ADDITIONAL_PROPERTIES filters here
