CSS: Fix background color of options in select.

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -422,7 +422,8 @@ select, textarea, input
 
   option
     color: $color-text
-    background-color: $color-background
+    // TODO(Pablo) Check override in Pillar.
+    background-color: $color-background !important
 
 /* Navigation */
 nav
