Introducing the latest comment system from Pillar

--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -264,6 +264,8 @@ html(lang='en')
 
 		script(src="{{ url_for('static_pillar', filename='assets/js/vendor/jquery-3.1.0.min.js')}}")
 		script(src="{{ url_for('static_pillar', filename='assets/js/tutti.min.js') }}")
+		script.
+			pillar.utils.initCurrentUser({{current_user | json | safe}});
 		script(src="{{ url_for('static_dillo', filename='js/generated/tutti.min.js') }}")
 		script(src="{{ url_for('static_dillo', filename='js/vendor/moment-2.18.1-with-locales.min.js') }}")
 
