--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -14,6 +14,7 @@
   box-shadow: 1px 2px 2px rgba(black, .1)
   cursor: pointer
   display: flex
+  flex-direction: row-reverse
   height: 100%
   margin: 8px 12px 8px 5px
   position: relative
@@ -57,6 +58,9 @@
 
     .item-title
       color: var(--community-theme-color, $color-primary)
+
+    .item-thumbnail
+      margin-right: 5px
 
   &.is-own
     .item-rating-box .item-rating.up,
