UI: Show date on list

--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -110,8 +110,10 @@
       white-space: nowrap
 
   .item-date
-    +media-sm
+    +media-md
       display: none
+    +media-lg
+      display: block
 
   .item-comments
     margin-left: auto
