--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -706,6 +706,14 @@ body[data-context="post-edit"]
     .item-details > ul li i
       margin-right: 10px
 
+  .user-badges > ul
+    display: flex
+    flex-direction: column
+
+    img
+      display: block
+      margin: 0
+      padding: 0
 
   .comments-container
     background-color: $color-background-light
@@ -721,11 +729,12 @@ body[data-context="post-edit"]
       padding: 10px 25px
 
     .comment-avatar
-      img
-        transition: transform 100ms ease-in-out
+      display: flex
+      flex-direction: column
+      align-items: center
 
-        &:hover
-          transform: scale(1.1)
+    .comment-reply-field, .comment-reply-field textarea
+      background-color: $color-background-dark
 
     .comment-container,
     .comment-reply-container
