Limit title length on post submission form

--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -35,6 +35,7 @@
 					value="{{ node.name }}",
 					type="text",
 					name="name",
+					maxlength="128",
 					placeholder="{{ _('Awesome Post Title') }}")
 
 
