--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -118,6 +118,12 @@ li
 | {% block body %}
 #col_main.listing-list
 
+	a(
+	href="#",
+	id="follow-toggle",
+	data-action="{% if community_is_followed %}unfollow{% else %}follow{% endif %}")
+		| {% if community_is_followed %}Unfollow{% else %}Follow{% endif %}
+
 	.listing-list-info
 		#list-sort-by(title="{{ _('Sort by') }}")
 		#list-pagination
@@ -552,4 +558,37 @@ script.
 		search.helper.setQuery('').search();
 	});
 
+
+script.
+	$('#follow-toggle').on('click', function (e) {
+		e.preventDefault();
+		// Reference action button
+		var $actionButton = $(this);
+		var action = $actionButton.data('action');
+
+		// Define url, depending on the current status
+		if (action === 'follow') {
+			var url = "{{ url_for('communitites_api.follow', project_id=project._id) }}";
+		} else {
+			var url = "{{ url_for('communitites_api.unfollow', project_id=project._id) }}";
+		}
+
+		// AJAX request to follow or unfollow
+		$.post(url)
+			.done(function (data) {
+				toastr.success(data.message);
+				// Update button
+				if (action === 'follow') {
+					$actionButton.data('action', 'unfollow');
+					$actionButton.text('Unfollow');
+				} else {
+					$actionButton.data('action', 'follow');
+					$actionButton.text('Follow');
+				}
+
+			})
+			.fail(function (err) {
+				toastr.error(xhrErrorResponseMessage(err), 'Not allowed');
+			});
+	});
 | {% endblock footer_scripts %}
