Fix top sorting

--- a/src/templates/dillo/index_followed.pug
+++ b/src/templates/dillo/index_followed.pug
@@ -60,6 +60,7 @@ li
 		select(id="list-sort-by", title="{{ _('Sort by') }}")
 			option(value="hot") {{ _('Hot') }}
 			option(value="new") {{ _('New') }}
+			option(value="top") {{ _('Top') }}
 		#list-pagination
 
 	#list-hits
