--- a/src/templates/dillo/index_followed.pug
+++ b/src/templates/dillo/index_followed.pug
@@ -163,23 +163,45 @@ script.
 
 	$(document).ready(function () {
 
-		//- The endpoint where we query posts
-		let postsEndpoint = "{{ url_for('posts.posts_list') }}";
-
-		function fetchPosts(params) {
+		function fetchPosts(params, append) {
+			//- The query string parameters (sorting and page)
 			if (params === undefined) { params = null };
-			$.get(postsEndpoint, params, function (dataHtml) {
-				$('#list-hits').html(dataHtml);
+			//- Do we want to append the results to the current list, or replace it?
+			//- The first case is used for changing sorting, the second for pagination
+			if (append === undefined) { append = false};
+			//- The endpoint where we query for posts
+			$.get("{{ url_for('posts.posts_list') }}", params, function (dataHtml) {
+				if (append) {
+					//- We are probably paginating
+					$('#list-hits').append(dataHtml);
+				} else {
+					//- We are probably sorting
+					$('#list-hits').html(dataHtml);
+				}
 			});
 		}
 
 		//- Load default posts
 		fetchPosts();
 
-		$("#list-sort-by").change(function () {
+		var $sortingDropDown = $("#list-sort-by");
+
+		$sortingDropDown.change(function () {
 			//- TODO(fsiddi) prevent reloading of same sorting
 			fetchPosts({'sorting': this.value});
 		});
+
+		$(document).on('click', 'body #js-load-more', function (e) {
+		// $("#js-load-more").on('click', function (e) {
+			e.preventDefault();
+			//- Remove the Load More button (it will be recreated by the new page loaded)
+			$(this).remove();
+			fetchPosts({
+				'sorting': $sortingDropDown.value,
+				'page': $(this).data('next-page')
+			}, true);
+		});
+
 	});
 
 | {% endblock footer_scripts %}
