UI: Fix loading bar.
Pillar now expects the class 'loading-bar' to show/hide it on pillarWorkStart

--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -81,7 +81,7 @@ html(lang='en')
 
 	body({% block bodyattrs %}{%endblock%})
 		#app-header
-			#app-loader
+			#app-loader.loading-bar
 
 			| {% block header %}
 			| {% if project.picture_header %}
