UI Posts Lists: Parse emojis.

--- a/src/templates/dillo/posts_list.pug
+++ b/src/templates/dillo/posts_list.pug
@@ -73,3 +73,5 @@ script.
 	document.getElementById("col_main").setAttribute("data-next-page", "{{ metadata['page'] + 1 }}");
 | {% endif %}
 
+script.
+	twemoji.parse(document.getElementById('list-hits'));
