UI Posts Lists: Show spinner while posts load.

--- a/src/templates/dillo/index_followed.pug
+++ b/src/templates/dillo/index_followed.pug
@@ -65,6 +65,8 @@ li
 		#list-pagination
 
 	#list-hits
+		.d-flex.justify-content-center.p-5
+			i.h3.pi-spin.spin.text-secondary
 
 	.listing-list-info
 		#list-stats
