--- a/src/templates/dillo/index_followed.pug
+++ b/src/templates/dillo/index_followed.pug
@@ -212,6 +212,7 @@ script.
 			//visible height + pixel scrolled = total height
 			if(this.offsetHeight + this.scrollTop == this.scrollHeight){
 				//- Once the end of the pageis reached, move one pixel up to avoid
+				//- Once the end of the page is reached, move one pixel up to avoid
 				//- getting stuck loading multiple times.
 				//- TODO(pablo) find a nicer way to avoid this.
 				this.scrollTop = this.scrollTop - 1;
