--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -10,13 +10,12 @@
     box-shadow: inset 0 1px $color-background-dark
 
   background-color: $color-background-light
-  border-radius: 3px
+  border-radius: $border-radius * 2
   box-shadow: 1px 2px 2px rgba(black, .1)
   cursor: pointer
   display: flex
   flex-direction: row-reverse
-  height: 100%
-  margin: 8px 12px 8px 5px
+  margin: 8px 12px 8px
   position: relative
   transition: background-color 150ms ease-in-out, box-shadow 250ms ease-in-out
 
@@ -40,7 +39,7 @@
       background-color: $color-background-lighter
       box-shadow: 1px 2px 2px rgba(black, .1), inset 5px 0 0 var(--community-theme-color, $color-primary)
     background-color: $color-background-lighter
-    box-shadow: 1px 2px 2px rgba(black, .1), inset -5px 0 0 var(--community-theme-color, $color-primary)
+    box-shadow: 1px 2px 2px rgba(black, .1), inset -3px 0 0 var(--community-theme-color, $color-primary)
 
     // Triangle on the right
     &:after
@@ -60,7 +59,7 @@
       color: var(--community-theme-color, $color-primary)
 
     .item-thumbnail
-      margin-right: 5px
+      opacity: 0
 
   &.is-own
     .item-rating-box .item-rating.up,
@@ -69,17 +68,13 @@
       color: rgba($color-text-dark-hint, .4)
 
   .item-details
-    ul
-      padding-bottom: 3px
-      padding-right: 5px
-
     +media-xs
       ul
         li
           font-size: .8em
 
     li
-      font-size: 11px
+      font-size: $font-size-small
 
     .item-link
       +media-lg
@@ -92,8 +87,7 @@
     +media-xs
       font-size: 1em
     color: $color-text
-    font-size: 1.1em
-    padding: 8px 10px 3px 0
+    font-size: 1.25em
 
     &:hover
       color: var(--community-theme-color, $color-primary)
@@ -104,16 +98,6 @@
   .item-author
     +media-xs
       display: none
-    +media-sm
-      max-width: 80px
-      overflow: hidden
-      white-space: nowrap
-
-  .item-date
-    +media-md
-      display: none
-    +media-lg
-      display: block
 
   .item-comments
     margin-left: auto
