Expose project.url and project.name to posts_list

--- a/src/templates/dillo/posts_list.pug
+++ b/src/templates/dillo/posts_list.pug
@@ -24,7 +24,7 @@ select(
 | {% endif %}
 
 | {% set rating = (post.properties.rating_positive - post.properties.rating_negative) %}
-| {% set post_url = url_for('posts.view', community_url=post.project, post_shortcode=post.properties.shortcode) %}
+| {% set post_url = url_for('posts.view', community_url=post.project.url, post_shortcode=post.properties.shortcode) %}
 
 .list-hits-item(
 	class="{% if post.user == (current_user.user_id | string) %}is-own{% endif %}",
